2024-03-12  Lee Howard <faxguy@howardsilvan.com>

        Fix fax2tiff issue #249
        Fix tiff2pdf issue #253
	tiff2pdf issue #254 is another case where -n should be used
	Fix tiff2pdf issue #255, must use tiff2pdf -n option for case
	tiff2pdf issue #281 appears to already be addressed, cannot reproduce
	tiff2bw issue #307 appears to already be addressed, cannot reproduce
	tiff2bw issue #366 appears to already be addressed, but was speculative
	tiffcrop issue #367 appears to already be addressed, but was speculative
	tiffcrop issue #368 appears to already be addressed
	tiff2ps issue #372 is speculative only, can't reproduce
	tiff2ps issue #373 appears to already be addressed
	tiff2ps issue #374 appears to already be addressed
	tiff2pdf issue #384 appears to already be addressed
	tiffcrop issue #404 appears to already be addressed
	tiffcrop issue #405 appears to already be addressed
	tiffcrop issue #406 appears to already be addressed
	tiffcrop issue #407 appears to already be addressed
	tiffcrop issue #408 appears to already be addressed
	tiffcrop issue #412 appears to already be addressed
        issues #453, #451, #447 unable to reproduce, appear to be addressed
	tiff2pdf issue #425 is a stated feature request
	Fix fax2tiff issue #468
	Fix tiff2rgba issue #469
	Fix tiffdither issue #473
	Fix tiff2ps and fax2tiff issues in #476
	tiffcrop issue #536 appears to already be addressed
	tiffcrop issue #537 appears to already be addressed
	Fix tiff2pdf issue #539
	tiff2pdf issue #540 appears to already be addressed
	tiffcrop issue #541 appears to already be addressed
	tiffcrop issue #549 appears to already be addressed
	Fix tiffcrop issues #552, #550, #542
	tiffcrop issue #561 appears to already be addressed
	tiffcrop issue #562 appears to already be addressed
	tiffcrop issue #563 appears to already be addressed
	tiffcrop issue #564 appears to already be addressed
	tiffcrop issue #565 appears to already be addressed