@@ -641,9 +641,9 @@ static const char usage_info[] =
     " -c jpeg[:opts]  compress output with JPEG encoding\n"
     /* "    JPEG options:", */
     "    #            set compression quality level (0-100, default 75)\n"
-    "    r            output color image as RGB rather than YCbCr\n"
-    "    For example, -c jpeg:r:50 for JPEG-encoded RGB with 50% comp. "
-    "quality\n"
+    "    r            do not change colorspace (raw)\n"
+    "    For example, -c jpeg:r:50 for JPEG-encoded with 50% comp. "
+    "quality and same colorspace\n"
 #endif
 #ifdef JBIG_SUPPORT
     " -c jbig         compress output with ISO JBIG encoding\n"
